# DataInspector

./: .gitignore  CMakeLists.txt  DataInspector.rc  csvloader.cpp  csvloader.h  cursormanager.cpp  cursormanager.h  datamanager.cpp  datamanager.h  main.cpp  mainwindow.cpp  mainwindow.h  readme.md  replaymanager.cpp  replaymanager.h  resources.qrc  signalpropertiesdialog.cpp  signalpropertiesdialog.h  signaltreedelegate.cpp  signaltreedelegate.h
third_libs/hdf5-1.14.6/include/: H5pubconf.h
third_libs/hdf5-1.14.6/lib/: libhdf5.settings
third_libs/hdf5-1.14.6/lib/pkgconfig/: hdf5.pc  hdf5_hl.pc
third_libs/qcustomplot-2.1.1/: qcustomplot.cpp
third_libs/quazip-1.5/lib/cmake/QuaZip-Qt5-1.5/: QuaZip-Qt5_SharedTargets-release.cmake  QuaZip-Qt5_SharedTargets.cmake  QuaZip-Qt5_StaticTargets-release.cmake  QuaZip-Qt5_StaticTargets.cmake
third_libs/quazip-1.5/lib/pkgconfig/: quazip1-qt5.pc
third_libs/zlib131/share/pkgconfig/: zlib.pc
